iter2b polish + dense timing: NaN-skip in joint torques, M=98K perf
Replaces the original 'Crazy torque' log spam (100k+ lines/seed at
gliding-assay scale) with an explicit Double.isNaN early return in
Myosin.applyLeverMotorJointTorque / applyRodLeverJointTorque. Behaviour
matches the original NaN-skip path; verification run shows 0 log lines
with all three observables inside the validation ensemble mean +/- 2 SD.

Dense smoke (glidingDense_demo_smoke, M~98K, 1101 steps) shows the GPU
path still 1.61x slower than CPU: kernel exec is competitive at 11.2
ms/call, but pack+unpack at 130 ms/call dominates. Crossover-to-win
needs iter2c (Brownian RNG on GPU, removes randForces upload) or iter2d
(true device residency).

Journal entries cover both today's iter2b implementation/validation and
this polish + dense session.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>